--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta content='width=device-width, initial-scale=0.3' name='viewport'/>
     <meta charset="UTF-8">
-    <meta name="theme-color" content="Cyan"></meta>
+    <meta name="theme-color" content="black"></meta>
     <title>Free Fire Rewards</title>
     <style type="text/css">
         .body{
